--- a/estrazione_dati/data.ipynb
+++ b/estrazione_dati/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "88bb9d3c-5ab2-40b4-a372-35764984b5e7",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "0906e489-63ec-44b1-835b-5b2f010de6a9",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Team</th>\n",
        "      <th>PERIOD</th>\n",
        "      <th>MINUTES_REMAINING</th>\n",
        "      <th>SECONDS_REMAINING</th>\n",
@@ -1121,11 +1120,26 @@
        "      <th>FG</th>\n",
        "      <th>SEASON</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Team</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
+       "      <th>Cleveland Cavaliers</th>\n",
        "      <td>1</td>\n",
        "      <td>8</td>\n",
        "      <td>56</td>\n",
@@ -1141,8 +1155,7 @@
        "      <td>2003-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
+       "      <th>Cleveland Cavaliers</th>\n",
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>44</td>\n",
@@ -1158,8 +1171,7 @@
        "      <td>2003-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
+       "      <th>Cleveland Cavaliers</th>\n",
        "      <td>1</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
@@ -1175,8 +1187,7 @@
        "      <td>2003-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
+       "      <th>Cleveland Cavaliers</th>\n",
        "      <td>1</td>\n",
        "      <td>6</td>\n",
        "      <td>29</td>\n",
@@ -1192,8 +1203,7 @@
        "      <td>2003-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
+       "      <th>Cleveland Cavaliers</th>\n",
        "      <td>1</td>\n",
        "      <td>4</td>\n",
        "      <td>48</td>\n",
@@ -1223,11 +1233,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29306</th>\n",
-       "      <td>Los Angeles Lakers</td>\n",
+       "      <th>Los Angeles Lakers</th>\n",
        "      <td>2</td>\n",
        "      <td>7</td>\n",
        "      <td>6</td>\n",
@@ -1243,8 +1251,7 @@
        "      <td>2023-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29307</th>\n",
-       "      <td>Los Angeles Lakers</td>\n",
+       "      <th>Los Angeles Lakers</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>30</td>\n",
@@ -1260,8 +1267,7 @@
        "      <td>2023-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29308</th>\n",
-       "      <td>Los Angeles Lakers</td>\n",
+       "      <th>Los Angeles Lakers</th>\n",
        "      <td>3</td>\n",
        "      <td>11</td>\n",
        "      <td>24</td>\n",
@@ -1277,8 +1283,7 @@
        "      <td>2023-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29309</th>\n",
-       "      <td>Los Angeles Lakers</td>\n",
+       "      <th>Los Angeles Lakers</th>\n",
        "      <td>3</td>\n",
        "      <td>8</td>\n",
        "      <td>5</td>\n",
@@ -1294,8 +1299,7 @@
        "      <td>2023-24</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29310</th>\n",
-       "      <td>Los Angeles Lakers</td>\n",
+       "      <th>Los Angeles Lakers</th>\n",
        "      <td>3</td>\n",
        "      <td>6</td>\n",
        "      <td>19</td>\n",
@@ -1312,50 +1316,67 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>29311 rows × 14 columns</p>\n",
+       "<p>29311 rows × 13 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                      Team  PERIOD  MINUTES_REMAINING  SECONDS_REMAINING  \\\n",
-       "0      Cleveland Cavaliers       1                  8                 56   \n",
-       "1      Cleveland Cavaliers       1                  7                 44   \n",
-       "2      Cleveland Cavaliers       1                  7                  1   \n",
-       "3      Cleveland Cavaliers       1                  6                 29   \n",
-       "4      Cleveland Cavaliers       1                  4                 48   \n",
-       "...                    ...     ...                ...                ...   \n",
-       "29306   Los Angeles Lakers       2                  7                  6   \n",
-       "29307   Los Angeles Lakers       2                  2                 30   \n",
-       "29308   Los Angeles Lakers       3                 11                 24   \n",
-       "29309   Los Angeles Lakers       3                  8                  5   \n",
-       "29310   Los Angeles Lakers       3                  6                 19   \n",
+       "                     PERIOD  MINUTES_REMAINING  SECONDS_REMAINING  \\\n",
+       "Team                                                                \n",
+       "Cleveland Cavaliers       1                  8                 56   \n",
+       "Cleveland Cavaliers       1                  7                 44   \n",
+       "Cleveland Cavaliers       1                  7                  1   \n",
+       "Cleveland Cavaliers       1                  6                 29   \n",
+       "Cleveland Cavaliers       1                  4                 48   \n",
+       "...                     ...                ...                ...   \n",
+       "Los Angeles Lakers        2                  7                  6   \n",
+       "Los Angeles Lakers        2                  2                 30   \n",
+       "Los Angeles Lakers        3                 11                 24   \n",
+       "Los Angeles Lakers        3                  8                  5   \n",
+       "Los Angeles Lakers        3                  6                 19   \n",
        "\n",
-       "                          ACTION_TYPE       SHOT_TYPE                   Zone  \\\n",
-       "0                           Jump Shot  2PT Field Goal              Mid-Range   \n",
-       "1                           Jump Shot  2PT Field Goal              Mid-Range   \n",
-       "2                  Fadeaway Jump Shot  2PT Field Goal              Mid-Range   \n",
-       "3                           Jump Shot  2PT Field Goal              Mid-Range   \n",
-       "4                   Running Jump Shot  2PT Field Goal  In The Paint (Non-RA)   \n",
-       "...                               ...             ...                    ...   \n",
-       "29306      Driving Floating Jump Shot  2PT Field Goal  In The Paint (Non-RA)   \n",
-       "29307  Running Finger Roll Layup Shot  2PT Field Goal        Restricted Area   \n",
-       "29308  Driving Finger Roll Layup Shot  2PT Field Goal        Restricted Area   \n",
-       "29309                Pullup Jump shot  3PT Field Goal      Above the Break 3   \n",
-       "29310      Running Reverse Layup Shot  2PT Field Goal        Restricted Area   \n",
+       "                                        ACTION_TYPE       SHOT_TYPE  \\\n",
+       "Team                                                                  \n",
+       "Cleveland Cavaliers                       Jump Shot  2PT Field Goal   \n",
+       "Cleveland Cavaliers                       Jump Shot  2PT Field Goal   \n",
+       "Cleveland Cavaliers              Fadeaway Jump Shot  2PT Field Goal   \n",
+       "Cleveland Cavaliers                       Jump Shot  2PT Field Goal   \n",
+       "Cleveland Cavaliers               Running Jump Shot  2PT Field Goal   \n",
+       "...                                             ...             ...   \n",
+       "Los Angeles Lakers       Driving Floating Jump Shot  2PT Field Goal   \n",
+       "Los Angeles Lakers   Running Finger Roll Layup Shot  2PT Field Goal   \n",
+       "Los Angeles Lakers   Driving Finger Roll Layup Shot  2PT Field Goal   \n",
+       "Los Angeles Lakers                 Pullup Jump shot  3PT Field Goal   \n",
+       "Los Angeles Lakers       Running Reverse Layup Shot  2PT Field Goal   \n",
        "\n",
-       "                Area            Range  LOC_X  LOC_Y  FGA  FG   SEASON  \n",
-       "0      Right Side(R)         8-16 ft.    158      0    1   1  2003-04  \n",
-       "1       Left Side(L)         8-16 ft.   -131      2    1   1  2003-04  \n",
-       "2      Right Side(R)        16-24 ft.    163      5    1   1  2003-04  \n",
-       "3       Left Side(L)         8-16 ft.   -118     92    1   0  2003-04  \n",
-       "4          Center(C)  Less Than 8 ft.     54     22    1   1  2003-04  \n",
-       "...              ...              ...    ...    ...  ...  ..      ...  \n",
-       "29306      Center(C)         8-16 ft.     -1     91    1   1  2023-24  \n",
-       "29307      Center(C)  Less Than 8 ft.     10      2    1   1  2023-24  \n",
-       "29308      Center(C)  Less Than 8 ft.    -36      1    1   1  2023-24  \n",
-       "29309      Center(C)          24+ ft.     23    269    1   1  2023-24  \n",
-       "29310      Center(C)  Less Than 8 ft.    -12     -4    1   0  2023-24  \n",
+       "                                      Zone           Area            Range  \\\n",
+       "Team                                                                         \n",
+       "Cleveland Cavaliers              Mid-Range  Right Side(R)         8-16 ft.   \n",
+       "Cleveland Cavaliers              Mid-Range   Left Side(L)         8-16 ft.   \n",
+       "Cleveland Cavaliers              Mid-Range  Right Side(R)        16-24 ft.   \n",
+       "Cleveland Cavaliers              Mid-Range   Left Side(L)         8-16 ft.   \n",
+       "Cleveland Cavaliers  In The Paint (Non-RA)      Center(C)  Less Than 8 ft.   \n",
+       "...                                    ...            ...              ...   \n",
+       "Los Angeles Lakers   In The Paint (Non-RA)      Center(C)         8-16 ft.   \n",
+       "Los Angeles Lakers         Restricted Area      Center(C)  Less Than 8 ft.   \n",
+       "Los Angeles Lakers         Restricted Area      Center(C)  Less Than 8 ft.   \n",
+       "Los Angeles Lakers       Above the Break 3      Center(C)          24+ ft.   \n",
+       "Los Angeles Lakers         Restricted Area      Center(C)  Less Than 8 ft.   \n",
        "\n",
-       "[29311 rows x 14 columns]"
+       "                     LOC_X  LOC_Y  FGA  FG   SEASON  \n",
+       "Team                                                 \n",
+       "Cleveland Cavaliers    158      0    1   1  2003-04  \n",
+       "Cleveland Cavaliers   -131      2    1   1  2003-04  \n",
+       "Cleveland Cavaliers    163      5    1   1  2003-04  \n",
+       "Cleveland Cavaliers   -118     92    1   0  2003-04  \n",
+       "Cleveland Cavaliers     54     22    1   1  2003-04  \n",
+       "...                    ...    ...  ...  ..      ...  \n",
+       "Los Angeles Lakers      -1     91    1   1  2023-24  \n",
+       "Los Angeles Lakers      10      2    1   1  2023-24  \n",
+       "Los Angeles Lakers     -36      1    1   1  2023-24  \n",
+       "Los Angeles Lakers      23    269    1   1  2023-24  \n",
+       "Los Angeles Lakers     -12     -4    1   0  2023-24  \n",
+       "\n",
+       "[29311 rows x 13 columns]"
       ]
      },
      "metadata": {},
@@ -1367,7 +1388,7 @@
     "\n",
     "df = df.drop(['GAME_ID', 'GAME_EVENT_ID', 'PLAYER_ID', 'PLAYER_NAME','TEAM_ID', 'EVENT_TYPE', 'SHOT_DISTANCE', 'GAME_DATE', 'HTM', 'VTM'], axis = 1)\n",
     "df = df.rename(columns={\"TEAM_NAME\": \"Team\", \"SHOT_MADE_FLAG\": \"FG\", \"SHOT_ATTEMPTED_FLAG\": \"FGA\", \"SHOT_ZONE_BASIC\": \"Zone\", \"SHOT_ZONE_AREA\": \"Area\", \"SHOT_ZONE_RANGE\": \"Range\"})\n",
-    "\n",
+    "df  = df.set_index(['Team'])\n",
     "df.to_pickle(\"../creazione_plot/LeBronShots.pickle\")\n",
     "display(df)"
    ]
