--- a/creazione_plot/plot.ipynb
+++ b/creazione_plot/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "id": "deb23328-ab7a-4d01-8bc3-813c5868d18d",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 122,
    "id": "175387ca",
    "metadata": {},
    "outputs": [],
@@ -21,27 +21,26 @@
     "from matplotlib.patches import Circle, Rectangle, Arc\n",
     "\n",
     "def draw_court(ax=None, color='black', lw=2, outer_lines=False):\n",
-    "    # If an axes object isn't provided to plot onto, just get current one\n",
-    "    if ax is None:\n",
-    "        ax = plt.gca()\n",
+    "        \n",
+    "    ax = plt.gca()\n",
     "\n",
-    "    # Create the various parts of an NBA basketball court\n",
+    "    # Create the elements of the court\n",
     "\n",
     "    # Create the basketball hoop\n",
-    "    # Diameter of a hoop is 18\" so it has a radius of 9\", which is a value\n",
-    "    # 7.5 in our coordinate system\n",
     "    hoop = Circle((0, 0), radius=7.5, linewidth=lw, color=color, fill=False)\n",
     "\n",
     "    # Create backboard\n",
     "    backboard = Rectangle((-30, -7.5), 60, -1, linewidth=lw, color=color)\n",
     "\n",
-    "    # The paint\n",
+    "    # Create the paint\n",
     "    # Create the outer box 0f the paint, width=16ft, height=19ft\n",
-    "    outer_box = Rectangle((-80, -47.5), 160, 190, linewidth=lw, color='yellow',\n",
+    "    paint = Rectangle((-80, -47.5), 160, 190, linewidth=lw, color='yellow',\n",
     "                          fill=True, alpha=0.2)\n",
     "    \n",
-    "    outer_box_lines = Rectangle((-80, -47.5), 160, 190, linewidth=lw, color='black',\n",
+    "    paint_lines = Rectangle((-80, -47.5), 160, 190, linewidth=lw, color='black',\n",
     "                          fill=False)\n",
+    "    \n",
+    "\n",
     "\n",
     "    # Create free throw top arc\n",
     "    top_free_throw = Arc((0, 142.5), 120, 120, theta1=0, theta2=180,\n",
@@ -66,7 +65,7 @@
     "\n",
     "\n",
     "    # List of the court elements to be plotted onto the axes\n",
-    "    court_elements = [hoop, backboard, outer_box, outer_box_lines, top_free_throw,\n",
+    "    court_elements = [hoop, backboard, paint, paint_lines, top_free_throw,\n",
     "                      bottom_free_throw,restricted, corner_three_a,\n",
     "                      corner_three_b, three_arc]\n",
     "\n",
@@ -89,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 123,
    "id": "15d5fabd",
    "metadata": {},
    "outputs": [
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 124,
    "id": "62bb72aa",
    "metadata": {},
    "outputs": [
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 125,
    "id": "de2eb6af",
    "metadata": {},
    "outputs": [
@@ -182,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 126,
    "id": "a1d79636",
    "metadata": {},
    "outputs": [
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 127,
    "id": "fe76722e",
    "metadata": {},
    "outputs": [
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "id": "bd40ef96",
    "metadata": {},
    "outputs": [
