--- a/estrazione_dati/data.ipynb
+++ b/estrazione_dati/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "88bb9d3c-5ab2-40b4-a372-35764984b5e7",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "b51c2a17-4d2c-4ee5-bd5a-fecf30530a58",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "78045a6f-93f7-4601-8aa1-a75511e62a25",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "55800e1d-86c2-4d85-a8e5-bfc5308495e2",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "id": "739afa26-3e51-4691-a344-70206f67f090",
    "metadata": {},
    "outputs": [
@@ -540,8 +540,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5812951",
+   "metadata": {},
+   "source": [
+    "#Lebron James Shots Analysis\n",
+    "In this notebook, we will create a dataframe of Lebron James' shots from his career which will be used in the following notebooks to analyze his shots.\n",
+    "\n",
+    "## Importing Libraries\n",
+    "The first thing to do is to import the necessary libraries and the data on which we will work.\n",
+    "The dataset can be found here: https://www.kaggle.com/datasets/eduvadillo/lebron-james-career-shots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
+   "id": "7725af80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('lebron_shot_data.csv', encoding='utf8')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4105538",
+   "metadata": {},
+   "source": [
+    "Let's start by cleaning the dataframe leaving only the necessary information.\n",
+    "\n",
+    "## Data Cleaning\n",
+    "Firstly we will remove the columns that are not necessary for the analysis.\n",
+    "Then we rename the columns to make it easier to understand the data.\n",
+    "Latelly we invert asciss because the original data is formatted for a mirrored basketball court in relation with the one i will plot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "0906e489-63ec-44b1-835b-5b2f010de6a9",
    "metadata": {},
    "outputs": [
@@ -566,23 +604,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PERIOD</th>\n",
-       "      <th>MINUTES_REMAINING</th>\n",
+       "      <th>Period</th>\n",
+       "      <th>Minutes_Remaining</th>\n",
        "      <th>SECONDS_REMAINING</th>\n",
        "      <th>ACTION_TYPE</th>\n",
-       "      <th>SHOT_TYPE</th>\n",
        "      <th>Zone</th>\n",
        "      <th>Area</th>\n",
-       "      <th>Range</th>\n",
-       "      <th>LOC_X</th>\n",
-       "      <th>LOC_Y</th>\n",
+       "      <th>Distance</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
        "      <th>FGA</th>\n",
        "      <th>FG</th>\n",
-       "      <th>SEASON</th>\n",
+       "      <th>Season</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Team</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -604,11 +640,10 @@
        "      <td>8</td>\n",
        "      <td>56</td>\n",
        "      <td>Jump Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Mid-Range</td>\n",
        "      <td>Right Side(R)</td>\n",
-       "      <td>8-16 ft.</td>\n",
-       "      <td>-158</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -620,11 +655,10 @@
        "      <td>7</td>\n",
        "      <td>44</td>\n",
        "      <td>Jump Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Mid-Range</td>\n",
        "      <td>Left Side(L)</td>\n",
-       "      <td>8-16 ft.</td>\n",
-       "      <td>131</td>\n",
+       "      <td>13</td>\n",
+       "      <td>-2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -636,11 +670,10 @@
        "      <td>7</td>\n",
        "      <td>1</td>\n",
        "      <td>Fadeaway Jump Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Mid-Range</td>\n",
        "      <td>Right Side(R)</td>\n",
-       "      <td>16-24 ft.</td>\n",
-       "      <td>-163</td>\n",
+       "      <td>16</td>\n",
+       "      <td>-5</td>\n",
        "      <td>5</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -652,11 +685,10 @@
        "      <td>6</td>\n",
        "      <td>29</td>\n",
        "      <td>Jump Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Mid-Range</td>\n",
        "      <td>Left Side(L)</td>\n",
-       "      <td>8-16 ft.</td>\n",
-       "      <td>118</td>\n",
+       "      <td>14</td>\n",
+       "      <td>-92</td>\n",
        "      <td>92</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -668,11 +700,10 @@
        "      <td>4</td>\n",
        "      <td>48</td>\n",
        "      <td>Running Jump Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>In The Paint (Non-RA)</td>\n",
        "      <td>Center(C)</td>\n",
-       "      <td>Less Than 8 ft.</td>\n",
-       "      <td>-54</td>\n",
+       "      <td>5</td>\n",
+       "      <td>-22</td>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -692,7 +723,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Los Angeles Lakers</th>\n",
@@ -700,11 +730,10 @@
        "      <td>7</td>\n",
        "      <td>6</td>\n",
        "      <td>Driving Floating Jump Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>In The Paint (Non-RA)</td>\n",
        "      <td>Center(C)</td>\n",
-       "      <td>8-16 ft.</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-91</td>\n",
        "      <td>91</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -716,11 +745,10 @@
        "      <td>2</td>\n",
        "      <td>30</td>\n",
        "      <td>Running Finger Roll Layup Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Restricted Area</td>\n",
        "      <td>Center(C)</td>\n",
-       "      <td>Less Than 8 ft.</td>\n",
-       "      <td>-10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-2</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -732,11 +760,10 @@
        "      <td>11</td>\n",
        "      <td>24</td>\n",
        "      <td>Driving Finger Roll Layup Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Restricted Area</td>\n",
        "      <td>Center(C)</td>\n",
-       "      <td>Less Than 8 ft.</td>\n",
-       "      <td>36</td>\n",
+       "      <td>3</td>\n",
+       "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -748,11 +775,10 @@
        "      <td>8</td>\n",
        "      <td>5</td>\n",
        "      <td>Pullup Jump shot</td>\n",
-       "      <td>3PT Field Goal</td>\n",
        "      <td>Above the Break 3</td>\n",
        "      <td>Center(C)</td>\n",
-       "      <td>24+ ft.</td>\n",
-       "      <td>-23</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-269</td>\n",
        "      <td>269</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -764,11 +790,10 @@
        "      <td>6</td>\n",
        "      <td>19</td>\n",
        "      <td>Running Reverse Layup Shot</td>\n",
-       "      <td>2PT Field Goal</td>\n",
        "      <td>Restricted Area</td>\n",
        "      <td>Center(C)</td>\n",
-       "      <td>Less Than 8 ft.</td>\n",
-       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
        "      <td>-4</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -776,11 +801,11 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>29311 rows × 13 columns</p>\n",
+       "<p>29104 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     PERIOD  MINUTES_REMAINING  SECONDS_REMAINING  \\\n",
+       "                     Period  Minutes_Remaining  SECONDS_REMAINING  \\\n",
        "Team                                                                \n",
        "Cleveland Cavaliers       1                  8                 56   \n",
        "Cleveland Cavaliers       1                  7                 44   \n",
@@ -794,49 +819,35 @@
        "Los Angeles Lakers        3                  8                  5   \n",
        "Los Angeles Lakers        3                  6                 19   \n",
        "\n",
-       "                                        ACTION_TYPE       SHOT_TYPE  \\\n",
-       "Team                                                                  \n",
-       "Cleveland Cavaliers                       Jump Shot  2PT Field Goal   \n",
-       "Cleveland Cavaliers                       Jump Shot  2PT Field Goal   \n",
-       "Cleveland Cavaliers              Fadeaway Jump Shot  2PT Field Goal   \n",
-       "Cleveland Cavaliers                       Jump Shot  2PT Field Goal   \n",
-       "Cleveland Cavaliers               Running Jump Shot  2PT Field Goal   \n",
-       "...                                             ...             ...   \n",
-       "Los Angeles Lakers       Driving Floating Jump Shot  2PT Field Goal   \n",
-       "Los Angeles Lakers   Running Finger Roll Layup Shot  2PT Field Goal   \n",
-       "Los Angeles Lakers   Driving Finger Roll Layup Shot  2PT Field Goal   \n",
-       "Los Angeles Lakers                 Pullup Jump shot  3PT Field Goal   \n",
-       "Los Angeles Lakers       Running Reverse Layup Shot  2PT Field Goal   \n",
-       "\n",
-       "                                      Zone           Area            Range  \\\n",
+       "                                        ACTION_TYPE                   Zone  \\\n",
        "Team                                                                         \n",
-       "Cleveland Cavaliers              Mid-Range  Right Side(R)         8-16 ft.   \n",
-       "Cleveland Cavaliers              Mid-Range   Left Side(L)         8-16 ft.   \n",
-       "Cleveland Cavaliers              Mid-Range  Right Side(R)        16-24 ft.   \n",
-       "Cleveland Cavaliers              Mid-Range   Left Side(L)         8-16 ft.   \n",
-       "Cleveland Cavaliers  In The Paint (Non-RA)      Center(C)  Less Than 8 ft.   \n",
-       "...                                    ...            ...              ...   \n",
-       "Los Angeles Lakers   In The Paint (Non-RA)      Center(C)         8-16 ft.   \n",
-       "Los Angeles Lakers         Restricted Area      Center(C)  Less Than 8 ft.   \n",
-       "Los Angeles Lakers         Restricted Area      Center(C)  Less Than 8 ft.   \n",
-       "Los Angeles Lakers       Above the Break 3      Center(C)          24+ ft.   \n",
-       "Los Angeles Lakers         Restricted Area      Center(C)  Less Than 8 ft.   \n",
+       "Cleveland Cavaliers                       Jump Shot              Mid-Range   \n",
+       "Cleveland Cavaliers                       Jump Shot              Mid-Range   \n",
+       "Cleveland Cavaliers              Fadeaway Jump Shot              Mid-Range   \n",
+       "Cleveland Cavaliers                       Jump Shot              Mid-Range   \n",
+       "Cleveland Cavaliers               Running Jump Shot  In The Paint (Non-RA)   \n",
+       "...                                             ...                    ...   \n",
+       "Los Angeles Lakers       Driving Floating Jump Shot  In The Paint (Non-RA)   \n",
+       "Los Angeles Lakers   Running Finger Roll Layup Shot        Restricted Area   \n",
+       "Los Angeles Lakers   Driving Finger Roll Layup Shot        Restricted Area   \n",
+       "Los Angeles Lakers                 Pullup Jump shot      Above the Break 3   \n",
+       "Los Angeles Lakers       Running Reverse Layup Shot        Restricted Area   \n",
        "\n",
-       "                     LOC_X  LOC_Y  FGA  FG   SEASON  \n",
-       "Team                                                 \n",
-       "Cleveland Cavaliers   -158      0    1   1  2003-04  \n",
-       "Cleveland Cavaliers    131      2    1   1  2003-04  \n",
-       "Cleveland Cavaliers   -163      5    1   1  2003-04  \n",
-       "Cleveland Cavaliers    118     92    1   0  2003-04  \n",
-       "Cleveland Cavaliers    -54     22    1   1  2003-04  \n",
-       "...                    ...    ...  ...  ..      ...  \n",
-       "Los Angeles Lakers       1     91    1   1  2023-24  \n",
-       "Los Angeles Lakers     -10      2    1   1  2023-24  \n",
-       "Los Angeles Lakers      36      1    1   1  2023-24  \n",
-       "Los Angeles Lakers     -23    269    1   1  2023-24  \n",
-       "Los Angeles Lakers      12     -4    1   0  2023-24  \n",
+       "                              Area  Distance    X    Y  FGA  FG   Season  \n",
+       "Team                                                                      \n",
+       "Cleveland Cavaliers  Right Side(R)        15    0    0    1   1  2003-04  \n",
+       "Cleveland Cavaliers   Left Side(L)        13   -2    2    1   1  2003-04  \n",
+       "Cleveland Cavaliers  Right Side(R)        16   -5    5    1   1  2003-04  \n",
+       "Cleveland Cavaliers   Left Side(L)        14  -92   92    1   0  2003-04  \n",
+       "Cleveland Cavaliers      Center(C)         5  -22   22    1   1  2003-04  \n",
+       "...                            ...       ...  ...  ...  ...  ..      ...  \n",
+       "Los Angeles Lakers       Center(C)         9  -91   91    1   1  2023-24  \n",
+       "Los Angeles Lakers       Center(C)         1   -2    2    1   1  2023-24  \n",
+       "Los Angeles Lakers       Center(C)         3   -1    1    1   1  2023-24  \n",
+       "Los Angeles Lakers       Center(C)        26 -269  269    1   1  2023-24  \n",
+       "Los Angeles Lakers       Center(C)         1    4   -4    1   0  2023-24  \n",
        "\n",
-       "[29311 rows x 13 columns]"
+       "[29104 rows x 12 columns]"
       ]
      },
      "metadata": {},
@@ -846,15 +857,19 @@
    "source": [
     "df = pd.read_csv('lebron_shot_data.csv', encoding='utf8')\n",
     "\n",
-    "df = df.drop(['GAME_ID', 'GAME_EVENT_ID', 'PLAYER_ID', 'PLAYER_NAME','TEAM_ID', 'EVENT_TYPE', 'SHOT_DISTANCE', 'GAME_DATE', 'HTM', 'VTM'], axis = 1)\n",
-    "df = df.rename(columns={\"TEAM_NAME\": \"Team\", \"SHOT_MADE_FLAG\": \"FG\", \"SHOT_ATTEMPTED_FLAG\": \"FGA\", \"SHOT_ZONE_BASIC\": \"Zone\", \"SHOT_ZONE_AREA\": \"Area\", \"SHOT_ZONE_RANGE\": \"Range\"})\n",
+    "df = df.drop(['GAME_ID', 'GAME_EVENT_ID', 'PLAYER_ID', 'PLAYER_NAME', 'TEAM_ID', 'EVENT_TYPE', 'GAME_DATE', 'HTM', 'VTM', 'SHOT_ZONE_RANGE', 'SHOT_TYPE'], axis=1)\n",
+    "df = df.rename(columns={\"TEAM_NAME\": \"Team\", \"PERIOD\": \"Period\", \"MINUTES_REMAINING\": \"Minutes_Remaining\", \"SHOT_MADE_FLAG\": \"FG\", \"SHOT_ATTEMPTED_FLAG\": \"FGA\", \"SHOT_ZONE_BASIC\": \"Zone\", \"SHOT_ZONE_AREA\": \"Area\", \"LOC_X\": \"X\", \"LOC_Y\": \"Y\", \"SHOT_DISTANCE\": \"Distance\", \"SEASON\": \"Season\"})\n",
     "#inverto la dx con la sx per avere la rappresentazione corretta\n",
     "#dati sono specchiati perchè la rappresentazione è specchiata rispetto all'asse y\n",
-    "df['LOC_X'] = -df['LOC_X']\n",
+    "df['X'] = -df['Y']\n",
     "\n",
     "#trasformo i left center e rigth center in left e right\n",
     "\n",
     "df['Area'] = df['Area'].replace(['Left Side Center(LC)', 'Right Side Center(RC)'], ['Left Side(L)', 'Right Side(R)'])\n",
+    "\n",
+    "\n",
+    "#remove not significant data\n",
+    "df = df[df['Distance'] <= 30]\n",
     "\n",
     "\n",
     "\n",
@@ -864,12 +879,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f6036fd-c322-49f7-beeb-3dba7aabefe3",
+   "cell_type": "markdown",
+   "id": "10f0e9ec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "From this dataset we will build a new one with the following columns:\n",
+    "- Team (index)\n",
+    "- Total Shots from each zone\n",
+    "- Total Shots Made from each zone\n",
+    "- Total Shots from each zone during the clutch time\n",
+    "- Total Shots Made from each zone during the clutch time\n",
+    "- Season\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
