--- a/estrazione_dati/data.ipynb
+++ b/estrazione_dati/data.ipynb
@@ -10,12 +10,12 @@
     "In this notebook, we will arrange the data to analyze LeBron James' offensive evolution throughout his career.\n",
     "\n",
     "## Importing Libraries\n",
-    "To begin our analysis, we need to import the required libraries and load the dataset that contains LeBron James' career shots. You can access the dataset here."
+    "To begin our analysis, we need to import the required libraries and load the dataset that contains LeBron James' career shots. You can access the dataset [here](https://www.kaggle.com/datasets/eduvadillo/lebron-james-career-shots)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "7725af80",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "0906e489-63ec-44b1-835b-5b2f010de6a9",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
    "source": [
     "## Advanced Data\n",
     "\n",
-    "This dataset has been compiled by aggregating various statistics from basketball-reference.com, which can be downloaded directly as a CSV file from the following links: basketball-reference.com and statmuse.com.\n",
+    "This dataset has been compiled by aggregating various statistics from basketball-reference.com, which can be downloaded directly as a CSV file from the following links: [basketball-reference.com](https://www.basketball-reference.com/players/j/jamesle01.html#advanced) and [statmuse.com](https://www.statmuse.com/nba/ask/nba).\n",
     "\n",
     "### Basketball Reference\n",
     "Similarly to before, we will clean up the dataset to retain only the relevant data. Additionally, we will set an index that will facilitate merging with other statistics."
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "fa7baecb",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "eae84be0",
    "metadata": {},
    "outputs": [],
